--- a/base.html
+++ b/base.html
@@ -1,19 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>{% block title %}{% endblock %} - My Webpage</title>
+    <meta charset='utf-8'>
     {% block head %}
-      <link rel="stylesheet" href="style.css" />
-      <title>{% block title %}{% endblock %} - My Webpage</title>
-      <meta charset='utf-8'>
+        
     {% endblock %}
 </head>
 <body>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-          &copy; Copyright 2008 by <a href="http://domain.invalid/">you</a>.
-        {% endblock %}
-    </div>
+    {% block footer %}
+        HEY HEY
+    {% endblock %}
 </body>
 </html>
