--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+
 {% block title %}Index{% endblock %}
+
 {% block head %}
-    {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
+    {% for style in styles %}
+    <link rel="stylesheet" href="/_static/{{ style }}"/>
+    {% endfor %}
 {% endblock %}
-{% block content %}
-    <h1>Index</h1>
-    <p class="important">
-      Welcome {{ name }} to my awesome homepage.
-    </p>
+
+{% block footer %}
+    {% for javascript in javascripts %}
+    <script src="/_static/{{ javascript }}"></script>
+    {% endfor %}
 {% endblock %}
