--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -1,6 +1,6 @@
 {% extends "../base.html" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}About Me{% endblock %}
 
 {% block head %}
     {% for style in styles %}
